Changelog for Processeditor
===========================

2018-05-30
* Added EnumerationClass to DomainModel